--- a/TreeViewRewrite.ServerSide/Shared/MainLayout.razor
+++ b/TreeViewRewrite.ServerSide/Shared/MainLayout.razor
@@ -1,4 +1,4 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 
 <PageTitle>TreeViewRewrite.ServerSide</PageTitle>
 
@@ -12,7 +12,7 @@
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
-        <article class="content px-4">
+        <article class="content px-4" style="height: 300px;">
             @Body
         </article>
     </main>
