--- a/TreeViewRewrite.ServerSide/wwwroot/treeViewRewrite.css
+++ b/TreeViewRewrite.ServerSide/wwwroot/treeViewRewrite.css
@@ -1,20 +1,21 @@
 .di_common_treeview {
     position: relative;
     height: 100%;
-}
-
-.di_common_treeview:focus {
+    background-color: #fcfaf5;
     outline: 1px solid black;
 }
 
 .di_common_treeview-caret-row {
     position: absolute;
     width: 100%;
-    background-color: cyan;
+    background-color: #d3d4d6;
+}
+
+.di_common_treeview-caret-row.di_active {
+    background-color: #b6ddff;
 }
 
 .di_common_treeview-node {
     position: absolute;
 }
-
 
