--- a/TreeViewRewrite.ServerSide/TreeViews/TreeViewDisplay.razor
+++ b/TreeViewRewrite.ServerSide/TreeViews/TreeViewDisplay.razor
@@ -1,4 +1,4 @@
-<div class="di_common_treeview" tabindex="-1" @onclick="HandleOnClick" @onkeydown="HandleOnKeyDown" @onfocus="HandleOnFocus" @onblur="HandleOnBlur">
+<div id="@_htmlId" class="di_common_treeview" tabindex="-1" @onclick="HandleOnClick" @onkeydown="HandleOnKeyDown" @onfocus="HandleOnFocus" @onblur="HandleOnBlur">
     
     <div class="@CaretRowCssClass" style="height: @(_lineHeight)px; top: @(_caretRowTop)px;">
     </div>
