--- a/TreeViewRewrite.ServerSide/Pages/Index.razor
+++ b/TreeViewRewrite.ServerSide/Pages/Index.razor
@@ -8,4 +8,7 @@
     <NodeRenderFragment Context="number">
         @number
     </NodeRenderFragment>
+    <ContextMenuRenderFragment Context="number">
+        The target number is: @number
+    </ContextMenuRenderFragment>
 </TreeViewDisplay>
